--- a/web/templates/my_coaches.html
+++ b/web/templates/my_coaches.html
@@ -1,4 +1,4 @@
 <div class="page-wrapper">
 </div>
 
-<script type="module" src="/priv/static/components/my_coaches.js"></script>
+<script type="module" src="./priv/static/components/my_coaches.js"></script>
