--- a/web/templates/payment_success.html
+++ b/web/templates/payment_success.html
@@ -1,4 +1,4 @@
 <div class="page-wrapper">
 </div>
 
-<script type="module" src="/priv/static/components/payment_success.js"></script>
+<script type="module" src="./priv/static/components/payment_success.js"></script>
